--- a/articles/6.md
+++ b/articles/6.md
@@ -5,15 +5,15 @@
 
 毕业来北京那会儿，盛夏的骄阳让人觉得略显孤单，每每从毫无遮阳的站台挤进公交车的时候，都觉得是一次久违的胜利。记得第一天上班，由于坐错了公交车，自己在大太阳下等了很久才换乘到了去公司的车，到了的时候已是汗流浃背了。
 
-公司的冷气时常让自己忘记了外面热情似火的艳阳，不过到了中午饭点的时候就能感受到冰火两重天的味道，有的女同事受不了这种巨大的发差，时不时一两周就要感冒一会，后来干脆在办公室内穿上了较厚的衣物来抵御这夏日咄咄逼人的冷气。
+公司的冷气时常让自己忘记了外面热情似火的艳阳，不过到了中午饭点的时候就能感受到冰火两重天的味道，有的女同事受不了这种巨大的反差，时不时一两周就要感冒一会，后来干脆在办公室内穿上了较厚的衣物来抵御这夏日咄咄逼人的冷气。
 
-刚来的时候住的是公司给租的集体宿舍，七八个男生一间房，分上下铺，晚上没有空调，有时候经常被热醒，做起来随手抓本薄一点的书扇扇，然后又迷迷糊糊的睡着了，但一早醒来后，又得匆匆的赶去上班。
+刚来的时候住的是公司给租的集体宿舍，七八个男生一间房，分上下铺，晚上没有空调，有时候经常被热醒，坐起来随手抓本薄一点的书扇扇，然后又迷迷糊糊的睡着了，但一早醒来后，又得匆匆的赶去上班。
 
 记得第一天刚进宿舍的时候，觉得很不自在，因为自己以前从未有过这种经历，求学的时候宿舍最多也就四个人，现在一间房里面一下住上七八个，突然感觉有种莫名的无助，不过过了几天和同事混熟之后，倒也习惯不少。
 
 宿舍每天会有一个值日表，主要安排做饭和打扫卫生的任务，记得我和一个同事被安排在周二做饭，下午五点半下班就匆匆的赶到小区门口的菜摊采购一些食材，通常都是土豆、萝卜和青菜之类的东西。一般晚上都有十来个人吃饭，得弄上好几个菜才能对付过去，实在觉得无菜可做的时候，就会来一个乱炖来解决问题，土豆、青菜、粉条加上若干鸡蛋来这么一大锅感觉还凑合。刚做饭常犯的一个错误是经常菜炒完了，米饭还没有蒸上，结果就是大家眼巴巴的看这电饭煲赶快把饭给搞熟，然后吃一顿凉菜。
 
-对于习惯了南方湿热的自己来说，其实北京这种干热已算不上什么酷刑了，最热的那阵无非也就是痛痛快快的来一场大汗淋漓了，不会像又高湿度的空气给你带来有些窒息的感觉。不过这两年的夏天总感觉在七月的前后有段时间是非常闷热，不知道是不是天气反常的缘故。
+对于习惯了南方湿热的自己来说，其实北京这种干热已算不上什么酷刑了，最热的那阵无非也就是痛痛快快的来一场大汗淋漓了，不会像又高湿度的空气给你带来有些窒息的感觉。不过这两年的夏天总感觉在七月的前后有段时间是非常闷热，不知道是不是天气反常的原因。
 
 这些年自己在外租房，晚上睡觉开空调的日子也就那么几天时间，白天的炙热基本上会随着太阳的落山而消散，有时候还会浸入一丝丝的凉风。
 
